--- a/mirrorfashion/css/sobre.css
+++ b/mirrorfashion/css/sobre.css
@@ -32,3 +32,27 @@ figcaption{
 	font-style:italic;
 	margin-top:10px;
 }
+
+footer{
+	color:#777;
+	margin: 30px 0;
+	padding: 30px 0;
+}
+
+footer img{
+	margin-right: 30px;
+	vertical-align: middle;
+	width:94px
+}
+
+#centro-distribuicao{
+	margin-left: auto;
+	margin-right: auto;
+	width:550px;
+}
+
+#familia-pelho{
+	float: right;
+	margin: 0 0 10px 10px;
+}
+
