--- a/mirrorfashion/css/estilo.css
+++ b/mirrorfashion/css/estilo.css
@@ -89,6 +89,19 @@ footer .container {
 	margin-left: 20px;
 }
 
+.menu-opcoes a:hover{
+	color: #007dc6;
+}
+
+.menu-opcoes a:active{
+	color: #867dc6;
+}
+
+.busca{
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px;
+}
+
 .busca, 
 .menu-departamentos{
 	background-color: #dcdcdc;
@@ -120,6 +133,28 @@ footer .container {
 .menu-departamentos a{
 	color: #333;
 	text-decoration:none;
+}
+
+.menu-departamentos li ul{
+	display:none;
+}
+
+.menu-departamentos li:hover ul{
+	display:block;
+}
+
+.menu-departamentos ul ul li{
+	background-color:#dcdcdc;
+}
+
+.menu-departamentos li li a:before{
+	content: '\272A';
+}
+
+.painel h2:before{
+	content:'\2756';
+	padding-right: 5px;
+	opacity: 0.4;
 }
 
 .busca input{
@@ -183,14 +218,44 @@ footer .container {
 	margin: 10px 0;
 	padding: 10px;
 	width:445px;
+	border-radius:10px;
+	box-shadow:1px 1px 4px #999, inset 1px 1px 4px #999;
+}
+
+.painel h2{
+	text-shadow:1px 1px 2px rgba(255,255,255,0.8);
 }
 
 .novidades{
 	float:left;
-	background-color:#f5dcdc;
+	background-color: #f5dcdc;
+	background: linear-gradient(#f5dcdc, #bebef4);
 }
 
 .mais-vendidos{
 	float:right;
 	background-color:#dcdcf5;
+	background: linear-gradient(#dcdcf5, #f4bebe);
+}
+
+.painel li:hover{
+	-webkit-transition: 0.3s ease-in;
+			transition: 0.3s ease-in;
+}
+
+.painel li{
+	-webkit-transition: 0.7s ease-out;
+			transition: 0.7s ease-out;
+}
+
+.painel li:hover{
+	background-color: rgba(255, 255, 255, 0.8);
+	box-shadow: 0 0 5px #333;
+	-webkit-transform: scale(1.2) rotate(-5deg);
+			transform: scale(1.2) rotate(-5deg);
+}
+
+.painel li:nth-child(2n):hover{
+	-webkit-transform: scale(1.2) rotate(5deg);
+			transform: scale(1.2) rotate(5deg);	
 }
