--- a/mirrorfashion/css/sobre.css
+++ b/mirrorfashion/css/sobre.css
@@ -20,6 +20,19 @@ p{
 	text-indent: 15px; 
 }
 
+p:first-letter{
+	font-weight: bold;
+}
+
+:not(p) + p:first-line{
+	font-variant: small-caps;
+}
+
+h1+p{
+	text-indent:0;
+}
+
+
 figure{
 	background-color: #F2EDED;
 	border: 1px solid #ccc;
