--- a/mirrorfashion/css/produto.css
+++ b/mirrorfashion/css/produto.css
@@ -190,3 +190,17 @@ td:first-child{
 		font.size:1.2em;
 	}
 }
+
+
+output {
+  display: inline-block;
+  height: 44px;
+  width: 44px;
+
+  line-height: 44px;
+  text-align: center;
+
+  border: 3px solid #666;
+  border-radius: 50%;
+  color: #555;
+}
